[package]
name = "movieinfo"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
crossterm = "0.28.1"
tui = "0.19"
image = "0.25.5"
viuer = "0.9"
